fixed login added context

--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -55,3 +55,13 @@
 .registerDesc {
     margin-bottom: 5px;
 }
+
+.red {
+    color: red;
+    background: white;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    font-size: 1.2em;
+    font-weight: 600;
+}
