--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -21,3 +21,13 @@
     background: none;
     cursor: pointer;
 }
+
+.loginLink {
+    position: absolute;
+    right: 15px;
+    top: 2%;
+}
+
+.navLinkButton {
+    margin-left: 10px;
+}
