--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -12,7 +12,7 @@
     width: 80%;
 }
 
-.searchButton {
+.beginButton {
     text-decoration: none;
     color: black;
     border: 1px solid black;
