--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -25,7 +25,14 @@
     border-radius: 4px;
 } 
 
-.required {
-    color: #CA1551;
-    font-weight: bold;
-  }
+
+  
+.red {
+    color: red;
+    background: white;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    font-size: 1.2em;
+    font-weight: 600;
+}
