--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,9 @@ main {
 .content {
   padding: 0;
   width: 100%;
+  background: url(/images/editedfood.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
