--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -10,6 +10,8 @@
     font-size: 2rem;
     margin: 0 auto;
     padding: 1rem;
+    font-weight: bolder;
+    font-family: 'Cinzel', serif;
 }
 
 /*add restaurant button*/
@@ -120,6 +122,11 @@
 /********************************************************************/
 /*For Ipads and larger screens */
 @media only screen and (min-width: 600px) {
+    /*entire account page*/
+    .AccountPage {
+        padding-top: 1rem;
+    }
+    
     /*welcome message*/
     .formTitle {
         font-size: 3rem;
@@ -165,7 +172,7 @@
 @media only screen and (min-width: 1024px) {
     /*welcome message*/
     .formTitle {
-        font-size: 3.3rem;
+        font-size: 3rem;
     }
 
     /*add restaurant button*/
