--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -24,6 +24,7 @@
     border: 1px solid black;
     padding: 10px;
     border-radius: 10px;
+    font-family: 'Delius', cursive;
 }
 
 /*container for restaurant and buttons associated*/
